# YART

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  premake5.lua
.github/workflows/: main-workflow.yml
YART-Cli/: CMakeLists.txt  premake5.lua
YART-Cli/src/: main.cpp  pch.h
YART-Lib/: CMakeLists.txt  premake5.lua
YART-Lib/include/: yart.h  yart.h.in
YART-Lib/include/accelerators/: bvh.h
YART-Lib/include/cameras/: camera.h  orthographic.h
YART-Lib/include/core/: assert.h  bxdf.h  film.h  imageio.h  interaction.h  log.h  memory_util.h  memoryutil.h  parallel.h  primitive.h  scene.h  spectrum.h  yart.h
YART-Lib/include/filters/: box.h  filter.h  gaussian.h  triangle.h
YART-Lib/include/geometry/: geometry.h  sphere.h
YART-Lib/include/integrators/: integrator.h  whitted.h
YART-Lib/include/materials/: material.h  matte.h
YART-Lib/include/math/: boundingbox.h  ereal.h  matrix.h  ray.h  rng.h  transform.h  util.h  vector.h
YART-Lib/include/samplers/: independent.h  sampler.h  stratified.h
YART-Lib/include/textures/: constant.h  texture.h
YART-Lib/src/: pch.h
YART-Lib/src/accelerators/: bvh.cpp
YART-Lib/src/core/: bxdf.cpp  film.cpp  imageio.cpp  interaction.cpp  log.cpp  log.h  memory_util.cpp  memoryutil.cpp  primitive.cpp  scene.cpp  spectrum.cpp  yart.cpp
YART-Lib/src/geometry/: geometry.cpp  sphere.cpp
YART-Lib/src/integrators/: integrator.cpp
YART-Lib/src/materials/: material.cpp
YART-Lib/src/math/: matrix.cpp  transform.cpp  util.cpp
YART-Lib/src/samplers/: independent.cpp  sampler.cpp  stratified.cpp
YART-Test/: CMakeLists.txt  premake5.lua
YART-Test/src/: main.cpp  testutil.cpp  testutil.h
YART-Test/src/accelerators/: bvh.cpp
YART-Test/src/core/: memory_util.cpp  memoryutil.cpp  spectrum.cpp
YART-Test/src/math/: bounding_box.cpp  boundingbox.cpp  matrix.cpp  vector.cpp
scripts/: GenerateLinuxProjects.sh  GenerateTemplates.py  GenerateWindowsProjects.bat  RunFormatter.sh  RunLinter.sh  templates.json
src/: main.cpp  pch.h
src/core/: assert.h  interaction.cpp  interaction.h  yart.cpp  yart.h
src/geometry/: geometry.cpp  geometry.h  sphere.cpp  sphere.h
src/math/: __math__.h  boundingbox.h  matrix.cpp  matrix.h  ray.h  transform.cpp  transform.h  util.cpp  util.h  vector.cpp  vector.h
src/shape/: shape.h
